# agents2-s4-paint-mcp

./: .gitignore  README.md  main.py  mcpserver.py  pyproject.toml  requirements.txt  talk2mcp.py  test.ipynb  test.py  test_gmail.py
